compiler/testData/compileKotlinAgainstCustomBinaries/incompleteHierarchyInJava/output.txt
compiler/testData/compileKotlinAgainstCustomBinaries/incompleteHierarchyInJava/source.kt:1:13: error: cannot access 'test.Super' which is a supertype of 'test.Sub'. Check your module classpath for missing or conflicting dependencies
import test.Sub
            ^
compiler/testData/compileKotlinAgainstCustomBinaries/incompleteHierarchyInJava/source.kt:3:16: error: cannot access 'test.Super' which is a supertype of 'test.Sub'. Check your module classpath for missing or conflicting dependencies
class SubSub : Sub()
               ^
compiler/testData/compileKotlinAgainstCustomBinaries/incompleteHierarchyInJava/source.kt:5:13: error: cannot access 'test.Super' which is a supertype of 'SubSub'. Check your module classpath for missing or conflicting dependencies
fun bar() = SubSub().foo()
            ^
compiler/testData/compileKotlinAgainstCustomBinaries/incompleteHierarchyInJava/source.kt:5:22: error: unresolved reference: foo
fun bar() = SubSub().foo()
                     ^
COMPILATION_ERROR
